uklonio visak servisa i klasa ili dupikate. Optmizirao full-search s tsvectorima i dodao TypedQuerije i tuple umjesto result-a paramsa